--- a/test.yml
+++ b/test.yml
@@ -13,3 +13,6 @@
 
   - name: install dpdk
     dpdk_install: build_shared_lib=true jobs=6
+
+  - name: dev bind to dpdk
+    devbind: device=0000:01:00.0 driver=mlx5_core
