--- a/run.yml
+++ b/run.yml
@@ -7,6 +7,10 @@
     LD_LIBRARY_PATH: /usr/src/dpdk-stable-17.11.1/build/lib
   tasks:
 
+  - name: put vsw.conf
+    copy: src=vsw.conf dest=/home/upa/work/vsw-dir/vsw1.conf
+
+
   - name: spawn openconfid
     spawn:
       args: "{{ GOPATH }}/bin/openconfigd -y modules:modules/policy:modules/bgp:modules/interfaces:modules/local-routing:modules/vlan:modules/rib:modules/network-instance:modules/types lagopus-router.yang"
@@ -14,12 +18,10 @@
       pidfile: /tmp/openconfid.pid
       stderr: /tmp/openconfigd-stderr
       stdout: /tmp/openconfigd-stdout
-      restart: true
+      respawn: false
     async: 10
-    poll: 0
+    poll: 1
 
-  - name: put vsw.conf
-    copy: src=vsw.conf dest=/home/upa/work/vsw-dir/vsw1.conf
 
   - name: spawn vsw
     spawn:
@@ -27,8 +29,8 @@
       pidfile: /tmp/vsw.pid
       stderr: /tmp/vsw-stderr
       stdout: /tmp/vsw-stdout
-      restart: true
+      respawn: false
     async: 10
-    poll: 10
+    poll: 1
     become: yes
 
