--- a/run.yml
+++ b/run.yml
@@ -4,7 +4,10 @@
     GOPATH : /home/upa/go2
   environment:
     GOPATH: "{{ GOPATH }}"
+    PATH: "{{ lookup('env', 'PATH') }}:{{ GOPATH }}/bin"
     LD_LIBRARY_PATH: /usr/src/dpdk-stable-17.11.1/build/lib
+
+
   tasks:
 
   - name: put vsw.conf
@@ -13,24 +16,31 @@
 
   - name: spawn openconfid
     spawn:
-      args: "{{ GOPATH }}/bin/openconfigd -y modules:modules/policy:modules/bgp:modules/interfaces:modules/local-routing:modules/vlan:modules/rib:modules/network-instance:modules/types lagopus-router.yang"
+      args: openconfigd -y modules:modules/policy:modules/bgp:modules/interfaces:modules/local-routing:modules/vlan:modules/rib:modules/network-instance:modules/types lagopus-router.yang
       cwd: "{{ GOPATH }}/src/github.com/lagopus/lagopus-router/yang"
       pidfile: /tmp/openconfid.pid
       stderr: /tmp/openconfigd-stderr
       stdout: /tmp/openconfigd-stdout
-      respawn: false
+      respawn: true
     async: 10
     poll: 1
 
 
   - name: spawn vsw
     spawn:
-      args: "{{ GOPATH }}/bin/vsw -v -f /home/upa/work/vsw-dir/vsw1.conf"
+      args: vsw -v -f /home/upa/work/vsw-dir/vsw1.conf
       pidfile: /tmp/vsw.pid
       stderr: /tmp/vsw-stderr
       stdout: /tmp/vsw-stdout
-      respawn: false
+      respawn: true
     async: 10
     poll: 1
     become: yes
 
+
+  - name: configure vsw
+    vsw_config: config={{ item }}
+    with_items:
+      - set network-instances network-instance vsi3 config type L2VSI
+      - set network-instances network-instance vsi3 config enabled true
+      - commit
