--- a/setup.yml
+++ b/setup.yml
@@ -1,5 +1,5 @@
 
-- hosts: yayoi2
+- hosts: localhost
   become: yes
   tasks:
   - name: install required packages
@@ -20,7 +20,7 @@
     devbind: device=000:01:00.0 driver=igb_uio
 
 
-- hosts: yayoi2
+- hosts: localhost
   vars:
     GOPATH : /home/upa/go2
   environment:
